Add points endpoints
