# spring-server/src/main/java/ch/heigvd/quaris/repositories/PointRepository.java
@@ -1,7 +1,6 @@
 package ch.heigvd.quaris.repositories;
 
 import ch.heigvd.quaris.models.Point;
-import ch.heigvd.quaris.models.Scale;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.stereotype.Repository;
 
@@ -13,9 +12,13 @@ import java.util.List;
  */
 @Repository
 public interface PointRepository extends CrudRepository<Point, Long> {
-    Point findByEndUserIdAndScaleId(Long endUserId, Long scaleId);
+    //Point findByEndUserIdAndScaleId(Long endUserId, Long scaleId);
 
-    Point findByEndUserId(Long endUserId);
+    //Point findByEndUserId(Long endUserId);
 
-    Point findByScaleId(Long scaleId);
+    //Point findByScaleId(Long scaleId);
+
+    List<Point> findByEndUserId(Long endUserId); // ByOrderByPointsAsc
+
+    //List<Point> findByApplicationNameByOrderByPointsAsc(String targetApplicationName);
 }
